src/objects/Intervention_Output__c.object
<CustomObject>
    <fields>
        <fullName>Client_Status_Outcomes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Status &amp; Outcome</label>
        <referenceTo>Client_Outcome__c</referenceTo>
        <relationshipLabel>Interventions/Outputs</relationshipLabel>
        <relationshipName>Interventions_Outputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interventions/Outputs</relationshipLabel>
        <relationshipName>Interventions_Outputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Groupwork_Type__c</fullName>
        <label>Groupwork Type</label>
        <picklist>
            <picklistValues>
                <fullName>Changing Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World of Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Assessment Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Better Lives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Release Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit4Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skills4Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveller Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifers Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Counselling/Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Activities/Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructive use of leisure time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Opportunities Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Education Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance, Assessment &amp; Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance and Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance and Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Interview Only (Information)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidance Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Assessment Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Seeking Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy and numeracy course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Card Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participating on Change course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychometric Assessment Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remedial Training Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare/Finance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist assessment - other agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational Training Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working on plan for training/employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World of Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Outputs__c</fullName>
        <label>Outputs</label>
        <picklist>
            <picklistValues>
                <fullName>Ability to Complete a Curriculum Vitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to Complete Job Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved Educational Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved IT Qualification/ Computer Lit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved Vocational Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Counselling/Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE Scheme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Activities/Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constructive use of leisure time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstrates Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed at Six Months (Follow Up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed at Three Months (Follow Up)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased Literacy Ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased Numeracy Ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to &apos;Action&apos; Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtained CSCS Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered a Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered a Job Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participated on Change course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Placement Guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progression Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral to Personal/Family Counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe Pass Achieved</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Intervention/Output</label>
    <nameField>
        <displayFormat>IO-{00000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interventions/Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>